# pants-example-local-dist

./: .gitignore  BUILD  README.md  pants.toml  setup.cfg  setup.py
src/foo/: BUILD  bar.pyx  main.py
test/: BUILD  test_foo.py  test_main.py
