[metadata]
name = foo
version = 0.0.1
url = https://github.com/gauthamnair/pants-exmaple-local-dist
author = Gautham Nair
author_email = "Gautham Nair" <gautham@gautham.edu>

[options]
package_dir =
    =src
packages = find:
python_requires = ==3.11.*
install_requires =
    tabulate

[options.packages.find]
where = src
